--- a/config/kube-httpserver_ko.yaml
+++ b/config/kube-httpserver_ko.yaml
@@ -23,7 +23,7 @@ spec:
         - "cluster-endpoint"
       containers:
       - name: kube-httpserver
-        image: local.harbor.io/kube-httpserver:v1.0
+        image: ko://git.harmonycloud.cn/gitops/kube-httpserver/cmd/kube-httpserver
         imagePullPolicy: IfNotPresent
         ports:
         - name: http
